Opened 4 months ago

Closed 8 weeks ago

#19155 closed bug (fixed)

KDL Assert Failed VMCache.cpp

Reported by: shaka Owned by: nobody
Priority: normal Milestone: R1/beta6
Component: System/Kernel Version: R1/beta5
Keywords: Cc:
Blocked By: #19012 Blocking: #19182, #19188
Platform: All

Description

Apparently there's still an issue with VMCache. Twice I kdl'd while trying to open youtube in Falkon Browser. This time I had MediaPlayer running which gave me a nice stutter loop to listen to while I took a picture of the kdl. :-)

Attachments (2)

photo_2024-10-09_12-33-44.jpg (352.0 KB ) - added by shaka 4 months ago.
photo_2024-10-09_12-33-49.jpg (163.1 KB ) - added by shaka 4 months ago.

Download all attachments as: .zip

Change History (12)

by shaka, 4 months ago

by shaka, 4 months ago

comment:1 by waddlesplash, 4 months ago

Component: - GeneralSystem/Kernel

comment:2 by waddlesplash, 4 months ago

I've tried browsing YouTube and watching videos in Falkon, and I haven't managed to reproduce these KDLs so far.

I've adjusted the panic message to print some more information in hrev58209. Please retest after that and upload new screenshots.

comment:3 by waddlesplash, 4 months ago

Blocking: 19182 added

comment:4 by waddlesplash, 3 months ago

Blocking: 19188 added

comment:5 by waddlesplash, 3 months ago

Blocked By: 19012 added

comment:6 by waddlesplash, 3 months ago

Milestone: UnscheduledR1/beta6

comment:7 by waddlesplash, 2 months ago

Resolution: fixed
Status: newclosed

Fixed in hrev58361.

comment:8 by waddlesplash, 2 months ago

Resolution: fixed
Status: closedreopened

Actually it wasn't; seems this is a different problem.

comment:10 by waddlesplash, 8 weeks ago

Resolution: fixed
Status: reopenedclosed

Fixed in hrev58388.

Note: See TracTickets for help on using tickets.