kernel/vm: Add some more information to the commitment <= size check.

May help with diagnosing #19155.